--- a/src/Dashboard/Dashboard.css
+++ b/src/Dashboard/Dashboard.css
@@ -74,23 +74,21 @@
 .goToChatButton:hover {
     background-color: rgb(255, 255, 255);
 } */
-.signOutButton:hover,
-.newChatButton:hover,
-.goToChatButton:hover {
+.dashboardBtn:hover {
     background-color: rgb(255, 255, 255);
 }
+.dashboardBtn:active {
+    background-color: rgb(255, 255, 255);
+}
+.dashboardBtn:focus {outline:0;}
 
 /* mobile devices mode */
 @media only screen and (max-width: 767px) {
-    /* .dashboard-cont {
-      width: 100vh;
-      height: 100vw;
-    } */
     .dashboard {
       width: 100%;
       height: 100%;
       display: grid;
-      grid-template: 10% 80% 10%/ 15% 15% 15% 55%;
+      grid-template: 8% 84% 8%/ 15% 15% 15% 55%;
     }
     .signOutButton{
         grid-area: 1 / 1 / 2 / 1;
