--- a/src/MessageInput/MessageInput.css
+++ b/src/MessageInput/MessageInput.css
@@ -74,15 +74,23 @@ textarea::-moz-placeholder {
 .icon:hover {
  background-color: rgb(255, 255, 255);
 }
+.icon:active {
+  background-color: rgb(255, 255, 255);
+}
+.icon:focus {outline:0;}
 
 @media only screen and (max-width: 767px) {
   .txtInputContainer {
     grid-area: 3 / 1 / 4 / 5;
   }
   .icon{
-    width: 10%;
+    width: 13%;
   }
+  .icon:hover {
+    background-color: rgb(255, 255, 255, 0.7);
+   }
   .toggle-emoji {
     visibility: hidden;
   }
 }
+
